agilecss for modal overflow fix

--- a/war/css/agilecrm.css
+++ b/war/css/agilecrm.css
@@ -90,7 +90,10 @@ table
 {
 background-color:white;
 }
-
+.modal 
+{
+	overflow-y: hidden;
+}
 /* contact.js,contact-details-actions,contact-details.html,contacts-filter.html,new-activity-modal.html,tags.html.. */
 #tags > h3
 {
